# Adventurev2

./: AdventureGame.vcxproj  AdventureGame.vcxproj.filters  Adventurev2.sln  Attack.h  CMakeLists.txt  Character.cpp  Character.h  Enemy.cpp  Enemy.h  FlavianBattleTester.cpp  FlavianBattleTester.h  Game.cpp  Game.h  Player.cpp  Player.h  SQLCONN.cpp  SQLCONN.h  Skills.cpp  Skills.h  main.cpp
AdventureGame/x64/Debug/: AdventureGame.exe.recipe  sqlconn.obj.enc  vc143.idb
AdventureGame/x64/Debug/AdventureGame.tlog/: AdventureGame.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
apps/: CMakeLists.txt  main.cpp
game/: CMakeLists.txt
game/include/: Attack.h  Character.h  Enemy.h  Game.h  Player.h
game/src/: Character.cpp  Enemy.cpp  Game.cpp  Player.cpp  SQLCONN.cpp  main.cpp
tests/: CMakeLists.txt  test_gamefunction.cpp
x64/Debug/: AdventureGame.exe.recipe  AdventureGame.ilk  vc143.idb
x64/Debug/AdventureGame.tlog/: AdventureGame.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
